--- a/index.html
+++ b/index.html
@@ -60,6 +60,10 @@
     <script type="module" src="./pages/not-found-page.js"></script>
     <script type="module" src="./pages/user-profile.js"></script>
     <script type="module" src="./pages/privacy-policy.js"></script>
+    <script type="module" src="./pages/test-with-sidebar.js"></script>
+    <script type="module" src="./pages/test-scrollable.js"></script>
+    <script type="module" src="./pages/test-minimal.js"></script>
+    <script type="module" src="./pages/test-full.js"></script>
     <script type="module" src="./components/app-header.js"></script>
     <script type="module" src="./components/app-footer.js"></script>
 
