--- a/index.html
+++ b/index.html
@@ -96,11 +96,10 @@
     <script type="module" src="./components/nav-sidebar.js"></script>
     <script type="module" src="./components/auth-guard.js"></script>
     <script type="module" src="./utils/auth-service.js"></script>
-    <script type="module" src="./pages/page-one.js"></script>
-    <script type="module" src="./pages/page-two.js"></script>
-    <script type="module" src="./pages/tool-a.js"></script>
-    <script type="module" src="./pages/tool-b.js"></script>
-    <script type="module" src="./pages/page-about.js"></script>
+    <script type="module" src="./pages/navigation-showcase.js"></script>
+    <script type="module" src="./pages/category-page-demo.js"></script>
+    <script type="module" src="./pages/nested-page-demo.js"></script>
+    <script type="module" src="./pages/components-gallery.js"></script>
     <script type="module" src="./pages/not-found-page.js"></script>
     <script type="module" src="./pages/user-profile.js"></script>
     <script type="module" src="./pages/privacy-policy.js"></script>
